--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
         "jquery.regex.js",
         "jquery.tipTip.minified.js",
         "Filmtipset.Other.js",
-        "remsa.png",
+        "images/progress.png",
         "images/grade/1grade.png",
         "images/grade/1gradeactive.png",
         "images/grade/2grade.png",
