--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,13 @@
     "short_name": "__MSG_extensionShortName__",
     "version": "2.3",
     "web_accessible_resources": [  
+        "filmtipset.html.js",
+        "grade.html.js",
+        "personal.html.js",
+        "imdb.js",
+        "other.js",
         "cache.js",
+        "Filmtipset.js",
         "Filmtipset.Common.js",
         "Filmtipset.ExtensionHost.js",
         "Filmtipset.FilmtipsetApi.js",
@@ -55,6 +61,7 @@
         {
             "matches": [ "http://*.imdb.com/title*" ],
             "js": [ 
+                "Filmtipset.js",
                 "Filmtipset.Common.js",
                 "Filmtipset.Imdb.js"
             ],
@@ -67,6 +74,7 @@
                 "jquery-1.10.2.min.js",
                 "jquery.regex.js", 
                 "jquery.tipTip.minified.js", 
+                "Filmtipset.js", 
                 "Filmtipset.Common.js", 
                 "Filmtipset.Other.js"
             ],
