--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
         "jquery-1.10.2.min.js",
         "jquery.regex.js",
         "jquery.tipTip.minified.js",
-        "Filmtipset.Other.js",
+        "Filmtipset.Links.js",
         "images/progress.png",
         "images/grade/1grade.png",
         "images/grade/1gradeactive.png",
@@ -77,7 +77,7 @@
                 "jquery.tipTip.minified.js", 
                 "Filmtipset.js", 
                 "Filmtipset.Common.js", 
-                "Filmtipset.Other.js",
+                "Filmtipset.Links.js",
                 "other.js"
             ],
             "run_at": "document_start"
