--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
     "manifest_version": 2,
+    "minimum_chrome_version": "22",
     "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
     "name": "__MSG_extensionName__",
     "short_name": "__MSG_extensionShortName__",
@@ -54,14 +55,18 @@
         "48": "images/icons/48.png",
         "128": "images/icons/128.png" 
     },
-    "background": { "persistent": false, "scripts": [ 
-        "js/cache.js",
-        "js/Filmtipset/Filmtipset.js", 
-        "js/Filmtipset/Filmtipset.FilmtipsetApi.js", 
-        "js/Filmtipset/Filmtipset.Common.js",
-        "js/Filmtipset/Filmtipset.ContentScriptRequest.js",
-        "js/Filmtipset/Filmtipset.ExtensionHost.js"
-        ] },
+    "background": { 
+        "persistent": false, 
+        "scripts": [
+            "js/cache.js",
+            "js/Filmtipset/Filmtipset.js",
+            "js/Filmtipset/Filmtipset.FilmtipsetApi.js",
+            "js/Filmtipset/Filmtipset.Common.js",
+            "js/Filmtipset/Filmtipset.ContentScriptRequest.js",
+            "js/Filmtipset/Filmtipset.ExtensionHost.js",
+            "extension-pages/background.js"
+        ]
+    },
     "page_action": {
         "default_icon": "images/pageactions/unknown.png",
         "default_popup": "extension-pages/grade.html"
