--- a/manifest.json
+++ b/manifest.json
@@ -69,8 +69,7 @@
         ]
     },
     "page_action": {
-        "default_icon": "images/icons/48.png",
-        "default_popup": "extension-pages/grade.html"
+        "default_icon": "images/icons/48.png"
     },
     "options_page": "extension-pages/personal.html",
     "content_scripts": [
